added Promise, added currend date field

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Promise Demo</title>
   <link rel="stylesheet" href="css/preloader.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -25,6 +25,7 @@
     <!-- USER INFO FIELD -->
     <div class="user-card_empty">Введите юзернейм в адресную строку</div>
     <div class="user-card">
+      <p class="current-date"> </p>
       <img class="avatar" src="" alt="">
       <div class="card__name">
         <h1 class="name">Имя: <a target="_blank" href="" class="user__name"></a></h1>
